slim openapi.yaml
